y.output
Terminals unused in grammar

    NOTOKEN


Grammar

    0 $accept: goal $end

    1 goal: commands

    2 commands: command NEWLINE
    3         | commands NEWLINE command

    4 command: simple_command
    5        | command PIPE simple_command

    6 simple_command: command_and_args iomodifier_opt NEWLINE
    7               | NEWLINE
    8               | error NEWLINE

    9 command_and_args: command_word arg_list

   10 arg_list: arg_list argument
   11         | ε

   12 argument: WORD

   13 command_word: WORD

   14 iomodifier_opt: GREAT WORD
   15               | LESS WORD
   16               | GREAT_GREAT WORD
   17               | AMPERSAND
   18               | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8
    WORD <string_val> (258) 12 13 14 15 16
    NOTOKEN (259)
    GREAT (260) 14
    NEWLINE (261) 2 3 6 7 8
    PIPE (262) 5
    LESS (263) 15
    GREAT_GREAT (264) 16
    AMPERSAND (265) 17


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    goal (12)
        on left: 1
        on right: 0
    commands (13)
        on left: 2 3
        on right: 1 3
    command (14)
        on left: 4 5
        on right: 2 3 5
    simple_command (15)
        on left: 6 7 8
        on right: 4 5
    command_and_args (16)
        on left: 9
        on right: 6
    arg_list (17)
        on left: 10 11
        on right: 9 10
    argument (18)
        on left: 12
        on right: 10
    command_word (19)
        on left: 13
        on right: 9
    iomodifier_opt (20)
        on left: 14 15 16 17 18
        on right: 6


State 0

    0 $accept: • goal $end

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    goal              go to state 4
    commands          go to state 5
    command           go to state 6
    simple_command    go to state 7
    command_and_args  go to state 8
    command_word      go to state 9


State 1

    8 simple_command: error • NEWLINE

    NEWLINE  shift, and go to state 10


State 2

   13 command_word: WORD •

    $default  reduce using rule 13 (command_word)


State 3

    7 simple_command: NEWLINE •

    $default  reduce using rule 7 (simple_command)


State 4

    0 $accept: goal • $end

    $end  shift, and go to state 11


State 5

    1 goal: commands •
    3 commands: commands • NEWLINE command

    NEWLINE  shift, and go to state 12

    $default  reduce using rule 1 (goal)


State 6

    2 commands: command • NEWLINE
    5 command: command • PIPE simple_command

    NEWLINE  shift, and go to state 13
    PIPE     shift, and go to state 14


State 7

    4 command: simple_command •

    $default  reduce using rule 4 (command)


State 8

    6 simple_command: command_and_args • iomodifier_opt NEWLINE

    GREAT        shift, and go to state 15
    LESS         shift, and go to state 16
    GREAT_GREAT  shift, and go to state 17
    AMPERSAND    shift, and go to state 18

    $default  reduce using rule 18 (iomodifier_opt)

    iomodifier_opt  go to state 19


State 9

    9 command_and_args: command_word • arg_list

    $default  reduce using rule 11 (arg_list)

    arg_list  go to state 20


State 10

    8 simple_command: error NEWLINE •

    $default  reduce using rule 8 (simple_command)


State 11

    0 $accept: goal $end •

    $default  accept


State 12

    3 commands: commands NEWLINE • command

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    command           go to state 21
    simple_command    go to state 7
    command_and_args  go to state 8
    command_word      go to state 9


State 13

    2 commands: command NEWLINE •

    $default  reduce using rule 2 (commands)


State 14

    5 command: command PIPE • simple_command

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    simple_command    go to state 22
    command_and_args  go to state 8
    command_word      go to state 9


State 15

   14 iomodifier_opt: GREAT • WORD

    WORD  shift, and go to state 23


State 16

   15 iomodifier_opt: LESS • WORD

    WORD  shift, and go to state 24


State 17

   16 iomodifier_opt: GREAT_GREAT • WORD

    WORD  shift, and go to state 25


State 18

   17 iomodifier_opt: AMPERSAND •

    $default  reduce using rule 17 (iomodifier_opt)


State 19

    6 simple_command: command_and_args iomodifier_opt • NEWLINE

    NEWLINE  shift, and go to state 26


State 20

    9 command_and_args: command_word arg_list •
   10 arg_list: arg_list • argument

    WORD  shift, and go to state 27

    $default  reduce using rule 9 (command_and_args)

    argument  go to state 28


State 21

    3 commands: commands NEWLINE command •
    5 command: command • PIPE simple_command

    PIPE  shift, and go to state 14

    $default  reduce using rule 3 (commands)


State 22

    5 command: command PIPE simple_command •

    $default  reduce using rule 5 (command)


State 23

   14 iomodifier_opt: GREAT WORD •

    $default  reduce using rule 14 (iomodifier_opt)


State 24

   15 iomodifier_opt: LESS WORD •

    $default  reduce using rule 15 (iomodifier_opt)


State 25

   16 iomodifier_opt: GREAT_GREAT WORD •

    $default  reduce using rule 16 (iomodifier_opt)


State 26

    6 simple_command: command_and_args iomodifier_opt NEWLINE •

    $default  reduce using rule 6 (simple_command)


State 27

   12 argument: WORD •

    $default  reduce using rule 12 (argument)


State 28

   10 arg_list: arg_list argument •

    $default  reduce using rule 10 (arg_list)
